--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "markdown-interpolation",
+  "name": "workflow-dispatch-sync",
   "version": "1.5.0",
-  "description": "Add an issue or pull request to a project",
+  "description": "Synchronous workflow_dispatch",
   "main": "lib/markdown.js",
   "types": "lib/markdown.d.ts",
   "scripts": {
@@ -19,7 +19,7 @@
   "readme": "README.md",
   "repository": {
     "type": "git",
-    "url": "https://github.com/austenstone/markdown-interpolation.git"
+    "url": "https://github.com/austenstone/workflow-dispatch-sync.git"
   },
   "license": "MIT",
   "devDependencies": {
@@ -34,5 +34,8 @@
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "octokit": "^2.0.14"
   }
 }
