--- a/.github/workflows/test_1_basic.yml
+++ b/.github/workflows/test_1_basic.yml
@@ -13,4 +13,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo Hello, world!
+      - name: ${{ inputs.uid }}
+        run: echo Hello, world!
