--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@octokit/types": "^9.2.2",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -36,6 +37,11 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "octokit": "^2.0.14"
+    "@octokit/webhooks": "^11.0.0",
+    "dotenv": "^16.0.3",
+    "eventsource": "^2.0.2",
+    "octokit": "^2.0.14",
+    "smee-client": "^1.2.3",
+    "uuid": "^9.0.0"
   }
 }
