--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@zip.js/zip.js": "^2.7.14",
     "dotenv": "^16.0.3",
     "eventsource": "^2.0.2",
     "octokit": "^2.0.14",
