--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@octokit/webhooks": "^11.0.0",
     "@zip.js/zip.js": "^2.7.14",
     "dotenv": "^16.0.3",
     "eventsource": "^2.0.2",
-    "octokit": "^2.0.14",
+    "octokit": "^2.0.15",
     "smee-client": "^1.2.3",
     "uuid": "^9.0.0"
   }
