--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,7 +32,7 @@ jobs:
 
       # echo the secret ENV to .env file
       - name: Setup .env
-        run: echo "${{ secrets.ENV }}" > .env
+        run: echo '${{ secrets.ENV }}' > .env
 
       - name: 🧪 Test
         run: npm run test
