--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -61,7 +61,7 @@ jobs:
       - name: ⬇️ Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: lib
+          name: dist
 
       - name: 🔴 NPM publish
         continue-on-error: true
@@ -86,7 +86,7 @@ jobs:
       - name: ⬇️ Download artifacts
         uses: actions/download-artifact@v2
         with:
-          name: lib
+          name: dist
 
       - name: Update package.json name 📝
         uses: jossef/action-set-json-field@v1
