--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -13,58 +13,35 @@ jobs:
     strategy:
       matrix:
         node: [ '16' ]
-    name: 🔨 Build 🧪 Test 🧹 Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: 🟩 Setup Node.js 16.x
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
           cache: npm
-
-      - name: 🟢 Install node modules
-        run: npm ci
-
-      - name: 🔨 Build
-        run: npm run build
-
-      # echo the secret ENV to .env file
-      - name: Setup .env
-        run: echo '${{ secrets.ENV }}' > .env
-
-      - name: 🧪 Test
-        run: npm run test
-
-      - name: 🧹 Lint Demo
-        run: npm run lint
-
-      - name: 💾 Archive artifacts
-        uses: actions/upload-artifact@v2
+      - run: npm ci
+      - run: npm run build
+      - run: echo '${{ secrets.ENV }}' > .env
+      - run: npm run test
+      - run: npm run lint
+      - uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist/
 
   publish_npm:
-    name: 🔴 NPM publish
     needs: ["build"]
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
-      - name: 🟩 Setup Node.js 16.x
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: "16"
-
-      - name: ⬇️ Download artifacts
-        uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: dist
-
-      - name: 🔴 NPM publish
-        continue-on-error: true
+      - continue-on-error: true
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
@@ -72,31 +49,22 @@ jobs:
           npm publish
 
   publish_github:
-    name: 😺 GitHub publish
     needs: ["build"]
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-      - name: 🟩 Setup Node.js 16.x
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: "16"
-
-      - name: ⬇️ Download artifacts
-        uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: dist
-
-      - name: Update package.json name 📝
-        uses: jossef/action-set-json-field@v1
+      - uses: jossef/action-set-json-field@v2.1
         with:
           file: package.json
           field: name
           value: "@${{ github.repository_owner }}/${{ github.event.repository.name }}"
-
-      - name: 😺 GitHub publish
-        continue-on-error: true
+      - continue-on-error: true
         env:
           OWNER: ${{ github.repository_owner }}
           NPM_TOKEN: ${{secrets.GITHUB_TOKEN}}
